datasource docker compose setup

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.datasource.url=jdbc:postgresql://localhost:5232/blockbuddy
+spring.datasource.username=caban
+spring.datasource.password=password
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
+spring.main.banner-mode=off
